test/error/StSwitchDefaultFallthrough.fu
public static class Test
{
	public static bool Run()
	{
		int x = 42;
		switch (x) {
		case 5:
			break;
		default:
			x++; //ERROR: 'default' must end with 'break', 'continue', 'return' or 'throw'
		}
		return true;
	}
}
